[package]
name = "levelcrush"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:axum", "dep:tower", "dep:tower-http"]
session = ["server", "dep:axum-sessions"]
cors = ["server"]
default = ["server", "session", "cors"]
destiny = []
destiny_http = ["destiny", "server", "cors"]
account = ["server", "cors"]

[dependencies]
levelcrush-macros = { path = "../lib-levelcrush-macros" }


# workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }

#async runtime
tokio = { workspace = true }

# webserver 
axum = { version = "0.6.19", optional = true }
axum-sessions = { version = "0.5.0", optional = true }
tower-http = { version = "0.4.2", features = [
    "full",
], default_features = false, optional = true }
tower = { version = "0.4.13", features = [
    "full",
], default_features = false, optional = true }

# required 
bigdecimal = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
dotenvy_macro = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing-test = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

# other
md5 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
